--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,14 @@ services:
     volumes:
       - mongo-data:/data/db
 
+  redis:
+    image: redis:alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+
   backend:
     build:
       context: ./server
@@ -18,6 +26,7 @@ services:
       - ./server/docker.env
     depends_on:
       - mongo
+      - redis
 
   frontend:
     build:
@@ -34,3 +43,4 @@ services:
 
 volumes:
   mongo-data:
+  redis-data:
