Add landing page for El Gammal warehouse with dark theme styling

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
     ports:
       - "5173:5173"
     env_file:
-      - ./client/.env
+      - ./client/docker.env
     depends_on:
       - backend
 
